--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,11 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+dotenv = "0.15.0"
+rand = "0.8"
+base64 = "0.13"
+sha2 = "0.9"
+digest = "0.9"
 
 [dependencies.uuid]
 version = "1.4.1"
