--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-IRIDIUM_BASE_URL = "https://conduct.iridium.software/"
-NEXT_PUBLIC_IRIDIUM_REDIRECT_URI = ""
-NEXT_PUBLIC_IRIDIUM_CLIENT_ID = ""
+IRIDIUM_BASE_URL = "https://conduct.iridium.software"
+NEXT_PUBLIC_IRIDIUM_REDIRECT_URI = "http://127.0.0.1:3000/callback"
+NEXT_PUBLIC_IRIDIUM_CLIENT_ID = "26bf7b9643282e2eea9f3d4884381db7"
 
 
-CLIENT_ID = ""
-CLIENT_SECRET = ""
-REDIRECT_URI = "http://localhost:3030/callback"
+CLIENT_ID = "b8b2357c71722df479e1"
+CLIENT_SECRET = "3e53e82e3f616a73312b9b4176eebef79ee688ea"
+REDIRECT_URI = "http://localhost:3000/callback"
 
